# youtube-ai-agent

./: .env.example  .gitignore  LICENSE  README.md  dashboard.py  install.bat  install.sh  main.py  patch_crewai.py  pyproject.toml  requirements.txt  run_pipeline.py  setup.py  setup_youtube_auth.py
.github/workflows/: daily_pipeline.yml
config/: client_secrets_template.json
output/scripts/: day01_long_metadata.json  day01_long_script.json  day01_short_metadata.json  day01_short_script.json
tests/: test_pipeline.py
youtube_ai_agent/: __init__.py
youtube_ai_agent/agents/: __init__.py
youtube_ai_agent/config/: prompts.py  settings.py
youtube_ai_agent/pipeline/: crew.py  scheduler.py  state.py
youtube_ai_agent/tasks/: video_tasks.py
youtube_ai_agent/tools/: __init__.py  editor_tool.py  pexels_tool.py  tavily_tool.py  tts_tool.py  youtube_tool.py
